app/assets/stylesheets/_vocab-sidebar.scss
.vocab-sidebar {
  @include border-radius-small;

  background-color: $vocab-bg;
  display: none;
  height: 90vh;
  width: 10rem;
  overflow: hidden;
  position: absolute;
  right: 1rem;
  text-align: center;
  z-index: 100;

  &:after {
    background: linear-gradient(transparent, $vocab-bg 2.5rem, $vocab-bg);
    bottom: 0;
    content: '';
    height: 3rem;
    left: 0;
    position: absolute;
    width: 100%;
    z-index: 2;
  }

  &__header {
    background-color: $vocab-header-bg;
    padding: .5rem 0 1rem;
  }

  &__list {
    box-shadow: inset 0 1px .125rem $light-med-grey;
    box-sizing: border-box;
    list-style-type: none;
    margin: 0;
    overflow: hidden;
    overflow-y: auto;
    padding: .5rem .3rem 1rem;
  }

  &__item {
    @include border-radius-small;

    background-color: $white;
    box-shadow: 0 .125rem .25rem $light-med-grey;
    box-sizing: border-box;
    margin: 1rem 0;
    width: 100%;

    .remove {
      right: -10px;
      top: -8px;
    }
  }

  &__image {
    min-height: 5rem;
    max-height: 5.5rem;
  }

  &__gloss {
    word-wrap: break-word;
  }

  .flash {
    @include border-radius-small;
    @include transition($short-time, opacity, max-height, margin-top, margin-bottom);

    background-color: $success-green;
    margin: 1rem auto;
    max-height: 4rem;
    opacity: 1;
    padding: .25rem;
    width: 80%;

    &:empty,
    &.hide-flash {
      margin: 0 auto;
      max-height: 0;
      opacity: 0;
    }

    &.error {
      background-color: $error-red;
    }
  }

  &__controls .button {
    @extend .orange_submit_button;
  }

  @media screen and (min-width: $medium-screen) {
    display: block;
  }
}

